# serde_bibtex

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  example.bib
.github/workflows/: rust.yml
assets/: biber_test.bib  errors.bib  escapes.bib  fun.bib  non_utf8.bib  parse_test.bib  syntax_test.bib
assets/syntax/: JG_biblio.bib  acl.ldc.upenn.edu#C#C04#C04-1107.bib  acl.ldc.upenn.edu#D#D07#D07-1.bib  acl.ldc.upenn.edu#D#D07#D07-1096.bib  acl.ldc.upenn.edu#D#D07#D07-1097.bib  acl.ldc.upenn.edu#H#H05#H05-1023.bib  acl.ldc.upenn.edu#P#P04#P04-1064.bib  acl.ldc.upenn.edu#P#P07#P07-2.bib  acl.ldc.upenn.edu#P#P07#P07-2045.bib  acl.ldc.upenn.edu#W#W04#W04-1221.bib  acl.ldc.upenn.edu#W#W06#W06-1645.bib  aclweb.org#anthology#C#C10#C10-1054.bib  aclweb.org#anthology#D#D10#D10-1017.bib  aclweb.org#anthology#P#P03#P03-2031.bib  aclweb.org#anthology-new#D#D07#D07-1120.bib  aclweb.org#anthology-new#D#D07#D07-1121.bib  aclweb.org#anthology-new#D#D07#D07-1130.bib  aclweb.org#anthology-new#D#D09#D09-1.bib  aclweb.org#anthology-new#D#D09#D09-1024.bib  aclweb.org#anthology-new#D#D11#D11-1.bib  aclweb.org#anthology-new#P#P11#P11-3.bib  aclweb.org#anthology-new#W#W08#W08-08.bib  aclweb.org#anthology-new#W#W10#W10-15.bib  aclweb.org#anthology-new#W#W11#W11-06.bib  aclweb.org#anthology-new#W#W11#W11-14.bib  adopt.arcetri.astro.it#html#pubblicazioni#arcetri#source#ao_bib.bib  agent.cs.dartmouth.edu#papers#smallbib#brewington:thesis.bib  agent.cs.dartmouth.edu#papers#smallbib#cybenko:3dcad.bib  ai.isi.edu#div3#pubs#bibtex#cohen1995finding.bib  ai.isi.edu#div3#pubs#bibtex#feng2004new.bib  ai.isi.edu#div3#pubs#bibtex#knight1999computational.bib  amermathmonthly1930.bib  amnl.mie.utoronto.ca#data#J36.bib  batman.usal.es#doctorado#prueba.bib  bib.rilk.com#5577#01#sources_tex#biblioPHD.bib  bibbase.org#cache#193_255_135_175_papers_krrpublications_bib#DBLP:conf_aaai_ErdemG05.bib  bibbase.org#cache#purl.org_NET_ssnx_ssn-xg-public.bib#Huang2008.bib  bibbase.org#cache#www.isi.edu_integration_group_docs_group.bib#lin05:wias.bib  bibbase.org#cache#www.isi.edu_integration_group_docs_group.bib#michelson2009:ijcai.bib  bmath.de#Docs#frankbauer.bib  (+568 more)
benches/: compare.rs  small.rs  utf8_conversion.rs
examples/: custom_formatter.rs  tugboat.rs
proptest-regressions/parse/: token.txt
src/: abbrev.rs  bib.rs  bibliography.rs  db.rs  de.rs  entry.rs  error.rs  lib.rs  macros.rs  main.rs  naming.rs  parse.rs  read.rs  reader.rs  ser.rs  syntax.rs  token.rs  validate.rs  value.rs
src/bib/: macros.rs  token.rs
src/de/: bibliography.rs  entry.rs  mod.rs  reader.rs  token.rs  value.rs
src/entry/: biblatex.rs  borrow.rs  owned.rs
src/parse/: balanced.rs  core.rs  lenient.rs  macros.rs  mod.rs  read.rs  token.rs  validate.rs
src/parser/: balanced.rs  biblatex.pest  bibtex.pest  lenient.rs  mod.rs  strict.rs
src/read/: create_input_impl.rs  slice_impl.rs  str_impl.rs
src/ser/: entry.rs  formatter.rs  macros.rs  value.rs
src/syntax/: bibtex.pest
tests/: syntax.rs  tugboat_struct.rs
(+11 files in other folders)
