[package]
name = "serde_bibtex"
description = "A BibTex serialization file format"
version = "0.1.0"
edition = "2021"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["bibtex", "serde", "serialization"]
categories = ["encoding", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autobib/serde_bibtex"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
unicase = "2.7"
memchr = "2.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
proptest = "1.0.0"
serde_bytes = "0.11"

[[bench]]
name = "small"
harness = false
