[package]
name = "serde_bibtex"
description = "A BibTex (de)serialization file format"
version = "0.6.1"
edition = "2024"
authors = ["Alex Rutar <alex@rutar.org>"]
keywords = ["bibtex", "serde", "serialization"]
categories = ["encoding", "parser-implementations"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/autobib/serde_bibtex"
exclude = [
    "assets/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
debug = true

[dependencies]
memchr = "2.7"
pest = {version = "2.7", optional = true}
pest_derive = {version = "2.7", optional = true}
serde = "1.0"
unicase = "2.7"

[features]
all = ["entry", "syntax"]
entry = ["serde/derive"]
syntax = ["dep:pest", "dep:pest_derive"]

[dev-dependencies]
biblatex = "0.10"
criterion = { version = "0.7", features = ["html_reports"] }
nom-bibtex = "0.5.0"
proptest = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[[bench]]
name = "small"
harness = false

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "utf8_conversion"
harness = false

[[example]]
name = "custom_formatter"

[[example]]
name = "tugboat"
